--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         {
             "name": "Hermann D. Schimpf",
             "email": "hschimpf@hds-solutions.net"
+        },
+        {
+            "name": "Miguel Romero",
+            "email": "mbopii@hds-solutions.net"
         }
     ],
     "minimum-stability": "dev",
