--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "finpar/pos-module",
+    "name": "hds-solutions/pos-module",
     "description": "POS module",
     "type": "laravel-module",
     "license": "GNU GPLv3",
@@ -16,13 +16,13 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "finpar/backend-module": "dev-develop",
-        "finpar/payments-module": "dev-develop"
+        "hds-solutions/backend-module": "dev-develop",
+        "hds-solutions/payments-module": "dev-develop"
     },
     "autoload": {
         "psr-4": {
-            "HDSSolutions\\Finpar\\": "app/",
-            "HDSSolutions\\Finpar\\Seeders\\": "database/seeders/"
+            "HDSSolutions\\Laravel\\": "app/",
+            "HDSSolutions\\Laravel\\Seeders\\": "database/seeders/"
         },
         "files": [
             "app/helpers.php"
@@ -31,10 +31,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "HDSSolutions\\Finpar\\POSModuleServiceProvider"
+                "HDSSolutions\\Laravel\\POSModuleServiceProvider"
             ],
             "aliases": {
-                "POS": "HDSSolutions\\Finpar\\POS\\Facade"
+                "POS": "HDSSolutions\\Laravel\\POS\\Facade"
             }
         }
     }
