--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cross-env": "^7.0",
         "laravel-mix": "^6.0",
         "laravel-mix-merge-manifest": "^2.0",
+        "laravel-mix-string-replace": "^0.1.0",
         "resolve-url-loader": "^3.1",
         "sass": "^1.32",
         "sass-loader": "^8.0"
